--- a/doc/tex/conclusion.tex
+++ b/doc/tex/conclusion.tex
@@ -1,2 +1,5 @@
 \chapter{Conclusion}
 \label{cha:conclusion}
+
+as we weight a solution found quickly much higher than a short solution we prefer to use an advanced heuristic that does go a long way around once in a while.
+The best planner would be to run both the A(+{*{B,B,a,a},c,4}) and the A(+{*{B,B,s,s},c,4}) and choose the shortest solution.
