--- a/doc/tex/discussion.tex
+++ b/doc/tex/discussion.tex
@@ -8,7 +8,7 @@ Difference between levels that are easy for humans and computers.
 \subsection{Patterns}
 Some levels contains an overall pattern which humans will easily spot while the computer will have a hard time solving the puzzle. A pattern could be where the player has to push the boxes in chain reaction.
 
-An example of this is shown in \ref{fig:level7}. A human player will quite fast spot that the level is build up by a circle of boxes only moveable by moving one of the bottom boxes to the midle and then by moving the box above its startposition one square down. Following this direction around the circle all the boxes can be put onto a goal square. The computer will have to try alot of moves before finding the correct pattern.
+An example of this is shown in figure \ref{fig:level7}. A human player will quite fast spot that the level is build up by a circle of boxes only moveable by moving one of the bottom boxes to the midle and then by moving the box above its startposition one square down. Following this direction around the circle all the boxes can be put onto a goal square. The computer will have to try alot of moves before finding the correct pattern.
 
 \begin{figure}[htp]
 	\centering
